[Closes #148] New Admin personnel management section

--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="sidebar">
   <ul *ngIf="currentAgency.id" class="sidebar__nav">
     <h4 class="sidebar__heading">Agency Admin</h4>    
-    <li>
+    <!-- <li>
       <a routerLink="/demographics/agency" routerLinkActive="sidebar__item--active" class="sidebar__item">Agency</a>
     </li>
     <li>
@@ -18,14 +18,14 @@
     </li>
     <li>
       <a routerLink="/demographics/locations" routerLinkActive="sidebar__item--active" class="sidebar__item">Locations</a>
-    </li>
+    </li> -->
     <li>
       <a routerLink="/demographics/personnel" routerLinkActive="sidebar__item--active" class="sidebar__item">Personnel</a>
     </li>
-    <li>
+    <!-- <li>
       <a routerLink="/demographics/vehicles" routerLinkActive="sidebar__item--active" class="sidebar__item">Vehicles</a>
     </li>
-    <!-- <li>
+    <li>
       <a routerLink="/demographics/custom-configuration" routerLinkActive="sidebar__item--active" class="sidebar__item">Demographics</a>
     </li>
     <li>
@@ -66,3 +66,8 @@
 <main>
   <router-outlet></router-outlet>
 </main>
+<div *ngIf="((notification.messages$|async)?.length ?? 0) > 0" class="notifications">  
+  <ngb-toast class="notifications__toast" *ngFor="let message of notification.messages$|async" [delay]="message.delay" (hidden)="notification.pop(message.id)">
+    {{message.text}}
+  </ngb-toast>
+</div>
