--- a/angular/projects/shared/src/lib/components/fields/xsd/xsd-element-wrapper.component.scss
+++ b/angular/projects/shared/src/lib/components/fields/xsd/xsd-element-wrapper.component.scss
@@ -1,3 +1,7 @@
-.input-group-text label {
-  margin-bottom: 0;
+.input-group {
+  display: flex;
+}
+
+.input-group-append {
+  margin: 0 0.875rem;
 }
