--- a/angular/projects/design/src/styles/_alert.scss
+++ b/angular/projects/design/src/styles/_alert.scss
@@ -2,3 +2,19 @@
   @include h4-semibold;
   color: white;
 }
+
+.notifications {
+  padding: 1rem;
+  position: fixed;
+  right: 50%;
+  top: 0;
+  transform: translateX(50%);
+}
+
+.notifications__toast {
+  @include h4-semibold;
+  background-color: $brand-primary-500;
+  border: 0;
+  color: white;
+  margin-bottom: 0.5rem;
+}
