--- a/angular/projects/shared/src/lib/components/fields/xsd/xsd-element-wrapper.component.html
+++ b/angular/projects/shared/src/lib/components/fields/xsd/xsd-element-wrapper.component.html
@@ -4,8 +4,9 @@
     <option *ngFor="let nv of nilValues" [value]="nv['xs:restriction']['xs:enumeration']._attributes.value">{{nv['xs:restriction']['xs:enumeration']['xs:annotation']['xs:documentation']._text}}</option>
   </select>
   <div *ngIf="isNillable" class="input-group-append">
-    <div class="input-group-text">
-      <small><input [(ngModel)]="isNil" [id]="formName + '-nil'" tabindex="-1" type="checkbox" />&nbsp;<label [for]="formName + '-nil'" class="text-muted">Nil?</label></small>
+    <div class="form-check">
+      <input [(ngModel)]="isNil" [id]="formName + '-nil'" tabindex="-1" type="checkbox" class="form-check-input" />
+      <label [for]="formName + '-nil'" class="form-check-label">Nil?</label>
     </div>
   </div>
   <div *ngIf="index !== undefined && !(isRequired && index == 0)" class="input-group-append">
