--- a/angular/projects/shared/src/lib/components/fields/xsd/xsd-form-group.component.html
+++ b/angular/projects/shared/src/lib/components/fields/xsd/xsd-form-group.component.html
@@ -1,36 +1,42 @@
-<div class="form-group">
-  <ng-container *ngIf="isGroup">
-    <label>{{displayName}}<sup *ngIf="isRequired">*</sup>&nbsp;<small class="font-weight-normal text-muted">({{name}})</small></label>
-    <div *ngFor="let selectedValue of values; index as i" class="form-group-nested">
-      <hr />
-      <button *ngIf="i > 0 || !isRequired" (click)="remValue(selectedValue)" class="btn btn-sm btn-danger form-group-nested--remove" type="button">&times;</button>
-      <shared-xsd-form-group *ngFor="let nestedElement of groupElements"
-        [element]="nestedElement" [data]="selectedValue" [error]="error"></shared-xsd-form-group>
+<div *ngIf="isGroup" class="mb-3">
+  <h4>{{displayName}}<sup *ngIf="isRequired">*</sup>&nbsp;<span>({{name}})</span></h4>
+  <div *ngFor="let selectedValue of values; index as i">
+    <button *ngIf="i > 0 || !isRequired" (click)="remValue(selectedValue)" class="btn btn--sm btn--danger" type="button">&times;</button>
+    <shared-xsd-form-group *ngFor="let nestedElement of groupElements"
+      [element]="nestedElement" [data]="selectedValue" [error]="error"></shared-xsd-form-group>
+    <hr />
+  </div>
+  <ng-container *ngIf="isMulti || values?.length === 0 || !values">
+    <div *ngIf="(values?.length ?? 0) > 0">
+      <button (click)="addValue({})" class="btn btn--sm btn--secondary" type="button">Add another {{displayName|inflection:'singularize'}}</button>
     </div>
-    <ng-container *ngIf="isMulti || values?.length === 0 || !values">
-      <div *ngIf="(values?.length ?? 0) > 0" class="form-group form-group-nested">
-        <hr />
-        <button (click)="addValue({})" class="btn btn-sm btn-outline-secondary" type="button">Add another {{displayName|inflection:'singularize'}}</button>
-      </div>
-      <div *ngIf="values?.length == 0 || !values" class="form-group">
-        <button (click)="addValue({})" class="btn btn-sm btn-outline-secondary" type="button">Add {{displayName|inflection:'singularize'}}</button>
-      </div>
-    </ng-container>
-  </ng-container>
-  <ng-container *ngIf="!isGroup">
-    <label [for]="formName" [class.text-danger]="isInvalid">
-      {{displayName}}<sup *ngIf="isRequired">*</sup>&nbsp;<small class="font-weight-normal text-muted">({{name}})</small>
-    </label>
-    <ng-container *ngIf="!isMulti">
-      <shared-xsd-element [element]="element" [data]="data" [error]="error"></shared-xsd-element>
-      <small class="form-text" [class.text-muted]="!isInvalid" [class.text-danger]="isInvalid">{{displayText}}</small>
-    </ng-container>
-    <ng-container *ngIf="isMulti">
-      <div *ngFor="let selectedValue of values; index as i" class="mb-1">
-        <shared-xsd-element [element]="element" [data]="data" [error]="error" [index]="i" [selectedValue]="selectedValue"></shared-xsd-element>
-      </div>
-      <small class="form-text mt-0 mb-2" [class.text-muted]="!isInvalid" [class.text-danger]="isInvalid">{{displayText}}</small>
-      <div><button (click)="addValue({})" class="btn btn-sm btn-outline-secondary" type="button">Add</button></div>
-    </ng-container>
+    <div *ngIf="values?.length == 0 || !values">
+      <button (click)="addValue({})" class="btn btn--sm btn--secondary" type="button">Add {{displayName|inflection:'singularize'}}</button>
+    </div>
+    <hr />
   </ng-container>
 </div>
+<ng-container *ngIf="!isGroup">
+  <div *ngIf="!isMulti" class="mb-3">
+    <div class="form-field" [class.form-field--invalid]="isInvalid" [class.form-field--nonempty]="value">
+      <label [for]="formName">
+        {{displayName}}<sup *ngIf="isRequired">*</sup>&nbsp;<small class="font-weight-normal text-muted">({{name}})</small>
+      </label>
+      <shared-xsd-element [element]="element" [data]="data" [error]="error"></shared-xsd-element>
+      <span [class.feedback]="!isInvalid" [class.invalid-feedback]="isInvalid">
+        {{displayText}}
+        <span *ngIf="isInvalid">{{errorMessages.join(' ')}}</span>
+      </span>
+    </div>
+  </div>
+  <div *ngIf="isMulti" class="form-field" [class.form-field--invalid]="isInvalid">
+    <label [for]="formName">
+      {{displayName}}<sup *ngIf="isRequired">*</sup>&nbsp;<small class="font-weight-normal text-muted">({{name}})</small>
+    </label>
+    <div *ngFor="let selectedValue of values; index as i" class="mb-1">
+      <shared-xsd-element [element]="element" [data]="data" [error]="error" [index]="i" [selectedValue]="selectedValue"></shared-xsd-element>
+    </div>
+    <small class="form-text mt-0 mb-2" [class.text-muted]="!isInvalid" [class.text-danger]="isInvalid">{{displayText}}</small>
+    <div><button (click)="addValue({})" class="btn btn--sm btn--secondary" type="button">Add</button></div>
+  </div>
+</ng-container>
