--- a/angular/projects/shared/src/lib/components/modal.component.html
+++ b/angular/projects/shared/src/lib/components/modal.component.html
@@ -6,13 +6,16 @@
     </button>
   </div>
   <ng-content select=".modal-body"></ng-content>
-  <div class="modal-footer">
-    <div>
-      <button *ngIf="dismissLabel" ngbAutofocus type="button" class="btn btn--sm btn--secondary" (click)="onDismiss()">{{dismissLabel}}</button>
+  <fieldset [disabled]="disabled">
+    <div class="modal-footer">
+      <ng-content select=".modal-footer"></ng-content>
+      <div>
+        <button *ngIf="dismissLabel" ngbAutofocus type="button" class="btn btn--sm btn--secondary" (click)="onDismiss()">{{dismissLabel}}</button>
+      </div>
+      <div>
+        <button *ngIf="dangerLabel" ngbAutofocus type="button" class="btn btn--sm btn--danger" (click)="onDanger()">{{dangerLabel}}</button>
+        <button *ngIf="confirmLabel" ngbAutofocus type="button" class="btn btn--sm btn--primary" (click)="onConfirm()">{{confirmLabel}}</button>
+      </div>
     </div>
-    <div>
-      <button *ngIf="dangerLabel" ngbAutofocus type="button" class="btn btn--sm btn--danger" (click)="onDanger()">{{dangerLabel}}</button>
-      <button *ngIf="confirmLabel" ngbAutofocus type="button" class="btn btn--sm btn--primary" (click)="onConfirm()">{{confirmLabel}}</button>
-    </div>
-  </div>
+  </fieldset>
 </ng-template>
