[Closes #156] Implement a Contact Us blacklist, add HTTP headers for debugging

--- a/emails/contact/html.ejs
+++ b/emails/contact/html.ejs
@@ -10,4 +10,8 @@
   <b>Feedback?</b> <%= feedback %><br />
   <b>Pilot?</b> <%= pilot %>
 </p>
+<p>
+  <b>Headers:</b><br />
+  <%= headers %>
+</p>
 <%- include('../layout/_footer.html.ejs') %>
