--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,23 +95,23 @@
       <h2>Our Story</h2>
       <h3>Dedicated to providing life saving efficiency.</h3>
       <p>Peak Response (originally NaTriage) was initially conceptualized in 2019 as part of the Tech to Protect Challenge, sponsored by NIST PSCR, aimed at fostering technological innovation for emergency responders. The solution came out of a focus on a common pain point: time spent documenting injuries and incidents at the scene of mass casualty incidents. These incidents are chaotic, high-pressure environments where time spent documenting can mean the difference between life and death. The quick tag scan and speech-to-text form filling were the first features, but the solution quickly expanded to include a variety of powerful sorting and data export options to improve efficiency, both at the point of contact with the patient and also for the incident commander monitoring the entire scene.</p>
-      <p>The Peak Response software has now expanded beyond mass casualties and a version designed specifically for quick daily patient documentation will be released in fall 2021.</p>
+      <p>The Peak Response software has now expanded beyond mass casualties and a version designed specifically for quick daily patient documentation is in development and testing.</p>
       <div id="story__bios" class="row">
-        <div class="col-lg-3">
-          <img src="/images/bio-britt.jpg" alt="Portrait of Britt Jensen">
-        </div>
-        <div class="col-lg-9">
-          <h4>Britt Jensen<span>&nbsp;&nbsp;|&nbsp;&nbsp;Co-Founder/CEO</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/britt-jensen-10957164/"><i class="fab fa-linkedin"></i></a></h4>
-          <p>Prior to co-founding Peak Response, Britt worked in product design consulting where she helped develop everything from medical devices to children’s toys for clients around the world. She is passionate about bringing user-centered products to industries that are not traditionally design-focused and believes that everyone, no matter how highly trained, is able to do their work more effectively with well-designed products. As CEO of Peak Response, Britt is focused on product definition, user validation, business strategy, marketing, and partnership development. She is committed to immersing herself in the public safety industry to build products that are simple, relevant, and innovative. Britt is a graduate of Stanford University’s design program.</p>
-        </div>
-      </div>
-      <div class="row">
         <div class="col-lg-3">
           <img src="/images/bio-francis.jpg" alt="Portrait of Francis Li">
         </div>
         <div class="col-lg-9">
-          <h4>Francis Li<span>&nbsp;&nbsp;|&nbsp;&nbsp;Co-Founder/CTO</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/francisli/"><i class="fab fa-linkedin"></i></a></h4>
+          <h4>Francis Li<span>&nbsp;&nbsp;|&nbsp;&nbsp;Co-Founder/CEO</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/francisli/"><i class="fab fa-linkedin"></i></a></h4>
           <p>Francis is a full-stack software architect with nearly two decades of experience building and launching new products in Silicon Valley. A serial entrepreneur, he has been a consultant, a co-founder and held executive level roles in numerous prior startups where he was responsible for executing the development of new web and mobile applications and services across a broad spectrum of industries, including healthcare, digital marketing, and entertainment. With a complementary background in interaction design, Francis is also a passionate advocate for user-centered design and serves as a bridge facilitating the tight integration between product and engineering. Francis holds BA and MS degrees in Computer Science from UC Berkeley and a Master of Interaction Design degree from the Interaction Design Institute Ivrea.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3">
+          <img src="/images/bio-britt.jpg" alt="Portrait of Britt Jensen">
+        </div>
+        <div class="col-lg-9">
+          <h4>Britt Jensen<span>&nbsp;&nbsp;|&nbsp;&nbsp;Co-Founder</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/britt-jensen-10957164/"><i class="fab fa-linkedin"></i></a></h4>
+          <p>Prior to co-founding Peak Response, Britt worked in product design consulting where she helped develop everything from medical devices to children’s toys for clients around the world. She is passionate about bringing user-centered products to industries that are not traditionally design-focused and believes that everyone, no matter how highly trained, is able to do their work more effectively with well-designed products. As CEO of Peak Response, Britt is focused on product definition, user validation, business strategy, marketing, and partnership development. She is committed to immersing herself in the public safety industry to build products that are simple, relevant, and innovative. Britt is a graduate of Stanford University’s design program.</p>
         </div>
       </div>
       <div class="row">
