[Closes #170] New Form/Signature models, API endpoint, Report integration

--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -15,8 +15,11 @@
     </li>
     <li>
       <a routerLink="/demographics/facilities" routerLinkActive="sidebar__item--active" class="sidebar__item">Facilities</a>
-    </li>
+    </li> -->
     <li>
+      <a routerLink="/demographics/forms" routerLinkActive="sidebar__item--active" class="sidebar__item">Forms</a>
+    </li>
+    <!-- <li>
       <a routerLink="/demographics/locations" routerLinkActive="sidebar__item--active" class="sidebar__item">Locations</a>
     </li> -->
     <li>
