--- a/angular/projects/design/src/app/app.component.html
+++ b/angular/projects/design/src/app/app.component.html
@@ -37,6 +37,11 @@
         Navs
       </a>
     </li>
+    <li>
+      <a routerLink="/typography" routerLinkActive="sidebar__item--active" class="sidebar__item">
+        Typography
+      </a>
+    </li>
   </ul>
 </nav>
 <main role="main">
