--- a/angular/projects/shared/src/lib/components/fields/select-field.component.html
+++ b/angular/projects/shared/src/lib/components/fields/select-field.component.html
@@ -1,4 +1,4 @@
-<div class="form-field"
+<div class="form-field form-field--noclear"
   [class.form-field--disabled]="isDisabled"
   [class.form-field--editing]="isEditing"
   [class.form-field--focused]="isFocused"
