--- a/angular/projects/shared/src/lib/components/fields/text-field.component.html
+++ b/angular/projects/shared/src/lib/components/fields/text-field.component.html
@@ -3,7 +3,7 @@
   [class.form-field--editing]="isEditing"
   [class.form-field--focused]="isFocused"
   [class.form-field--invalid]="isInvalid"
-  [class.form-field--multiline]="rows > 1"
+  [class.form-field--noclear]="rows > 1"
   [class.form-field--nonempty]="isNonEmpty"
   [class.form-field--plaintext]="isPlaintext"
   [class.form-field--unconfirmed]="isUnconfirmed"
