--- a/angular/projects/design/src/app/buttons.component.html
+++ b/angular/projects/design/src/app/buttons.component.html
@@ -20,7 +20,7 @@
     <button class="btn btn--sm btn--primary">Label</button>
     <button class="btn btn--sm btn--danger ms-3">Label</button>
     <button class="btn btn--sm btn--secondary ms-2">Label</button>
-    <a class="btn btn--sm btn--secondary ms-2">Label</a>
+    <a class="btn btn--sm btn--secondary--danger ms-2">Label</a>
     <button class="btn btn--sm btn--tertiary ms-2">Label</button>
   </div>
   <div class="mb-3">
