--- a/angular/projects/design/src/styles/_alert.scss
+++ b/angular/projects/design/src/styles/_alert.scss
@@ -1,6 +1,11 @@
 .alert {
   @include h4-semibold;
   color: white;
+
+  .invalid-feedback {
+    @include h4-semibold;
+    color: white;
+  }
 }
 
 .notifications {
