--- a/angular/projects/admin/src/app/demographics/base-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/base-demographics.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2">
   <h1 class="h2">{{sectionHeader}}</h1>
-  <a *ngIf="isGrouped && !isEditing" (click)="onNew()" class="btn btn-sm btn-outline-secondary">New</a>
+  <a *ngIf="isGrouped && !isEditing" (click)="onNew()" class="btn btn--sm btn--secondary">New</a>
 </div>
 <div class="row">
   <div *ngIf="sectionSchema && sectionData && isGrouped && !isEditing" class="col">
@@ -14,7 +14,7 @@
         </thead>
         <tbody>
           <tr *ngFor="let record of data[groupElementName]" (click)="onSelect(record)">
-            <td><i *ngIf="!(record._attributes && record._attributes['pr:isValid'])" class="fas fa-exclamation-triangle text-warning"></i> {{record._attributes?.UUID}}</td>
+            <td>{{record._attributes?.UUID}}</td>
             <td *ngFor="let column of sectionColumns">
               {{(record|get:column.attr)?._text}}
             </td>
@@ -24,18 +24,31 @@
       </table>
     </div>
   </div>
-  <form (submit)="onSubmit()" *ngIf="sectionSchema && sectionData && (!isGrouped || (isGrouped && isEditing))" class="col-md-6">
-    <shared-error *ngIf="error" [error]="error"></shared-error>
-    <fieldset [disabled]="isLoading">
-      <ng-container *ngFor="let element of childElements">
-        <shared-xsd-form-group [element]="element" [data]="record" [error]="error"></shared-xsd-form-group>
-      </ng-container>
-      <div class="form-group">
-        <button *ngIf="isNewRecord" type="submit" class="btn btn-primary">Create</button>
-        <button *ngIf="!isNewRecord" type="submit" class="btn btn-primary">Update</button>
-      </div>
-    </fieldset>
-  </form>
+  <ng-container *ngIf="sectionSchema && sectionData && (!isGrouped || (isGrouped && isEditing))">
+    <div class="col-md-6">
+      <ul *ngIf="record.draft" class="nav">
+        <li class="nav__item"><a tabIndex="0" class="nav__link" [class.nav__link--active]="isEditingDraft" (click)="isEditingDraft = true">Draft</a></li>
+        <li class="nav__item"><a tabIndex="0" class="nav__link" [class.nav__link--active]="!isEditingDraft" (click)="isEditingDraft = false">Current</a></li>
+      </ul>
+      <form (submit)="onSubmit()">
+        <div *ngIf="isSavedErrorFree" class="alert alert-success">
+          Draft saved!
+        </div>
+        <div *ngIf="error && (isNewRecord || isEditingDraft)" class="alert alert-danger">
+          <shared-error [error]="error"></shared-error>
+        </div>
+        <fieldset [disabled]="isLoading">
+          <ng-container *ngFor="let element of childElements">
+            <shared-xsd-form-group [element]="element" [data]="isEditingDraft ? record.draft.data : record.data" [error]="isNewRecord || isEditingDraft ? error : null"></shared-xsd-form-group>
+          </ng-container>
+          <div class="d-flex justify-content-between mb-3">
+            <button *ngIf="isNewRecord || isEditingDraft || !record.draft" type="submit" class="btn btn--primary">Save Draft</button>
+            <button *ngIf="isEditingDraft" (click)="onDeleteDraft()" type="button" class="btn btn--danger">Delete Draft</button>
+          </div>
+        </fieldset>
+      </form>
+    </div>
+  </ng-container>
   <div class="col" *ngIf="isLoading">
     <shared-loader></shared-loader>
   </div>
