--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -10,6 +10,7 @@
 // @import "~bootstrap/scss/tables";
 // @import "~bootstrap/scss/forms";
 @import '~bootstrap/scss/forms/form-check';
+@import '~bootstrap/scss/forms/input-group';
 // @import "~bootstrap/scss/buttons";
 // @import "~bootstrap/scss/transitions";
 // @import "~bootstrap/scss/dropdown";
