--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -9,10 +9,23 @@ form {
   }
 
   hr {
-    background-color: $base-300;
-    height: 2px !important;
+    border-top: 2px solid $base-300;
     opacity: 1;
   }
+}
+
+.select-wrapper {
+  position: relative;
+  height: 2.75rem;
+  flex: 1;
+}
+
+.select-wrapper__select {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .form-field {
@@ -59,7 +72,12 @@ form {
     background-repeat: no-repeat;
     background-position: right center;
     appearance: none;
+    padding-right: 2rem;
   }
+}
+
+.form-field__content {
+  padding: 0.375rem 0.875rem;
 }
 
 .form-field--nonempty {
@@ -108,8 +126,7 @@ form {
   }
 }
 
-:not(.form-field--noclear).form-field--editing.form-field--nonempty,
-:not(.array-field--noclear).array-field__item {
+:not(.form-field--noclear).form-field--editing.form-field--nonempty {
   &::after {
     display: block;
     position: absolute;
@@ -141,7 +158,7 @@ select:disabled {
   border-color: $brand-primary-500;
   box-shadow: 0 0 0 4px $brand-primary-200;
 
-  label {
+  label:not(.form-check-label) {
     color: $brand-primary-500;
   }
 }
@@ -152,7 +169,7 @@ select:disabled {
     box-shadow: 0 0 0 4px $brand-secondary-400;
   }
 
-  label {
+  label:not(.form-check-label) {
     color: $brand-secondary-500;
   }
 }
@@ -269,12 +286,6 @@ select:disabled {
   padding-left: 0.875rem;
 }
 
-.array-field__label {
-  @include h4-semibold;
-  margin: 0.375rem 1rem;
-  color: $base-500;
-}
-
 .array-field__item {
   position: relative;
   @include h3-semibold;
@@ -291,12 +302,75 @@ select:disabled {
   &.sortable-chosen {
     cursor: grabbing;
   }
+
+  .input-group {
+    align-items: center;
+    & > input:first-child {
+      margin-left: 0;
+    }
+    & > .select-wrapper:first-child select {
+      margin-left: 0;
+      padding-left: 0;
+    }
+    & > .input-group-append:last-child {
+      margin-right: 0;
+    }
+  }
+
+  .invalid-feedback {
+    margin-left: 0;
+  }
+}
+
+label + .array-field__item,
+.feedback + .array-field__item {
+  border-top: 2px solid $brand-primary-300;
+  margin-top: 0.375rem;
+}
+
+.array-field__item + .form-field__content {
+  border-top: 2px solid $brand-primary-300;
+}
+
+.array-field:not(.array-field--noclear) .array-field__item {
+  padding-right: 3.25rem;
+  &::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0.5rem;
+    background: transparent
+      url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L5.29289 17.2929ZM18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L18.7071 6.70711ZM6.70711 18.7071L18.7071 6.70711L17.2929 5.29289L5.29289 17.2929L6.70711 18.7071Z' fill='%232F4A56'/%3E%3Cpath d='M6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L6.70711 5.29289ZM17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L17.2929 18.7071ZM5.29289 6.70711L17.2929 18.7071L18.7071 17.2929L6.70711 5.29289L5.29289 6.70711Z' fill='%232F4A56'/%3E%3C/svg%3E%0A")
+      no-repeat center center/1.5rem 1.5rem;
+    content: '';
+    cursor: pointer;
+    height: 2.25rem;
+    width: 2.25rem;
+  }
+}
+
+.array-field__item + .array-field__item.array-field__item--invalid,
+.array-field__item.array-field__item--invalid + .form-field__content,
+.array-field__item.array-field__item--invalid + .array-field__item {
+  border-top-color: $brand-secondary-500;
+}
+
+.array-field__item--invalid {
+  .select-wrapper__select {
+    color: $brand-secondary-500;
+  }
 }
 
 .array-field__subitem {
   border-top: 2px dotted $base-300;
   margin: 0.375rem 0 0;
   padding: 0.375rem 0 0;
+  &:first-child {
+    border-top: 0;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 .form-field + .array-field__form {
