--- a/angular/projects/design/src/styles/_variables.scss
+++ b/angular/projects/design/src/styles/_variables.scss
@@ -57,8 +57,10 @@ $brand-secondaries: (
   '800': $brand-secondary-800,
 );
 
+$triage-minimal-medium: #52d395;
+$triage-minimal-light: #c5f9d3;
+
 $body-color: $base-800;
-$danger: $brand-secondary-500;
 
 $btn-border-radius: 0.5rem;
 $btn-border-radius-lg: $btn-border-radius;
@@ -103,6 +105,7 @@ $shadow-focused-editing: 0px 0px 0px 4px #d0e9f7;
 
 $primary: $brand-primary-500;
 $danger: $brand-secondary-500;
+$success: $triage-minimal-medium;
 $info: $brand-primary-500;
 
 $alert-padding-x: $grid-gutter-width;
