--- a/angular/projects/shared/src/lib/components/fields/array-field.component.html
+++ b/angular/projects/shared/src/lib/components/fields/array-field.component.html
@@ -1,6 +1,5 @@
-<div class="array-field">
-  <h4>{{label}}</h4>
-  <div *ngIf="value && value.length > 0" class="form-field form-field--noclear"
+<div class="array-field" [class.array-field--noclear]="!showClearButton">
+  <div class="form-field form-field--noclear"
     [class.form-field--disabled]="isDisabled"
     [class.form-field--editing]="isEditing"
     [class.form-field--focused]="isFocused"
@@ -9,11 +8,14 @@
     [class.form-field--unconfirmed]="isUnconfirmed"
     (update)="onSorted($event)"
     [sortablejs]="value">
-    <div *ngFor="let item of value; let i=index" [attr.data-index]="i" class="array-field__item" [class.array-field--noclear]="!showClearButton" (click)="onClick($event)">
-      <ng-template [ngTemplateOutlet]="itemTemplate" [ngTemplateOutletContext]="{item, removeItem: onRemoveItem, updateItem: onUpdateItem}"></ng-template>
+    <label>{{label}}</label>
+    <ng-container *ngIf="value && value.length > 0">
+      <div *ngFor="let item of value; let i=index" [attr.data-index]="i" class="array-field__item" (click)="onClick($event)">
+        <ng-template [ngTemplateOutlet]="itemTemplate" [ngTemplateOutletContext]="{item, removeItem: onRemoveItem, updateItem: onUpdateItem}"></ng-template>
+      </div>
+    </ng-container>
+    <div class="form-field__content">
+      <ng-template [ngTemplateOutlet]="formTemplate" [ngTemplateOutletContext]="{addItem: onAddItem}"></ng-template>
     </div>
-  </div>
-  <div class="array-field__form">
-    <ng-template [ngTemplateOutlet]="formTemplate" [ngTemplateOutletContext]="{addItem: onAddItem}"></ng-template>
   </div>
 </div>
