--- a/angular/projects/shared/src/lib/components/fields/xsd/xsd-select-state.component.html
+++ b/angular/projects/shared/src/lib/components/fields/xsd/xsd-select-state.component.html
@@ -1,5 +1,11 @@
-<shared-xsd-element-wrapper [element]="element" [data]="data" [index]="index" [selectedValue]="selectedValue">
-  <select [id]="formName" [name]="formName" [(ngModel)]="value" class="custom-select" [class.is-invalid]="isInvalid">
-    <option *ngFor="let state of STATES" [value]="state.id">{{state.name}}</option>
-  </select>
+<shared-xsd-element-wrapper [element]="element" [data]="data" [index]="index" [selectedValue]="selectedValue" [displayOnly]="displayOnly">
+  <ng-container *ngIf="isDisplayOnly">
+    <ng-container *ngIf="enumeratedValue as val; else noVal">{{val}}</ng-container>
+    <ng-template #noVal>&nbsp;</ng-template>
+  </ng-container>
+  <div *ngIf="!isDisplayOnly" class="select-wrapper">
+    <select [id]="formName" [name]="formName" [(ngModel)]="value" class="select-wrapper__select" [class.is-invalid]="isInvalid">
+      <option *ngFor="let state of STATES" [value]="state.id">{{state.name}}</option>
+    </select>
+  </div>
 </shared-xsd-element-wrapper>
